@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=net.jarre_de_the.Xvidcap
+Exec=@bindir@/xvidcap
