@@ -1,4 +1,11 @@
 
+2007-10-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* net.jarre_de_the.Xvidcap.service.in, Makefile.am,
+		src: dbus-server-object.c, 
+		dbus-server-object.h, Makefile.am, 
+		xvidcap-infos.xml: prototype for
+		dbus support
+
 2007-10-22  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* src/app_data.c: reimplemented passing of
 		environment variables to spawned 
